# awesome-nutrient

./: .gitignore  AGENTS.md  README.md  TYPECHECK.md  biome.json  eslint.config.mjs  install-web-examples.sh  package-lock.json  package.json  pnpm-lock.yaml  typecheck-web-examples.sh
.buildkite/: pipeline.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: byome.yml  lint.yml  typecheck.yml
docs/examples/: web-forms.md  web-toolbars-menus.md  web-viewer.md
document-authoring/: .gitignore  README.md
document-authoring/ai-editing/: .env.sample  .gitignore  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
document-engine/: README.md
document-engine/de-docker-compose/: LICENSE  (+5 more)
dws/: .env  .env.example  .gitignore  README.md  error.md  eslint.config.js  index.html  package-lock.json  package.json  playground.mdx  server.js  vite.config.js
next-samples-app/: package-lock.json  package.json
pdf-rag-ingestion-pipeline-python/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run.py
pdf-rag-ingestion-pipeline-python/ingestion/: chunk.py  embed.py  extract.py  store.py
pdf-rag-ingestion-pipeline-python/retrieval/: ask.py
pdf-rag-ingestion-pipeline-python/tests/: test_chunk.py
playground/: README.md  package-lock.json  package.json  tsconfig.json  web-annotations.md  web-comments.md  web-content-editor.md  web-document-editor.md  web-form-creator.md  web-forms.md  web-redaction.md  web-signing.md  web-text-comparison.md  web-toolbars-menus.md  web-viewer.md
scripts/: lint.sh
web/: .gitignore
(+600 files in other folders)
